[metadata]
name = pyhvr
version = 6.0.2
author = HVR Software
author_email = vit.spinka@hvr-software.com
description = Python SDK for HVR6
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hvrsoftware/pyhvr
license_file = LICENSE

[options]
packages = pyhvr
python_requires = >=3.6
include_package_data = True
install_requires = requests
